Make changes on captcha subtitle in sell AboutUs alignment fixed

--- a/src/components/aboutUs/AboutUs.module.scss
+++ b/src/components/aboutUs/AboutUs.module.scss
@@ -22,12 +22,13 @@
 .footer {
     color: #828282 !important;
     text-align: left !important;
-    margin: 10px 0px 0px 30px !important
+    margin: 10px 0px 0px 51px !important
 }
 
 .mainContainer {
     padding-left: 0px !important;
     padding-right: 0px !important;
-    margin: 10px;
+    margin: 10px ;
+    margin-left: 50px !important;
 
 }
