--- a/src/components/contactUs/ContactUs.module.scss
+++ b/src/components/contactUs/ContactUs.module.scss
@@ -1,5 +1,5 @@
 .box {
-    padding-left: 55px;
+    padding-left: 52px;
     padding-top:  10px; ;
 }
 
@@ -38,7 +38,7 @@ padding-right: 0px !important;
 
 .box1 {
     margin-top: 10px;
-    margin-left: 10px;
+    margin-left: 21px;
 }
 
 }
@@ -46,4 +46,9 @@ padding-right: 0px !important;
 text-align: center !important;
 margin-bottom: 25px !important;
 margin-top: -10px !important;
+}
+.captchaBtn{
+    text-transform: none !important;
+    max-width: 70px;
+    min-width: 70px;
 }
